style.scss
$grey: #8a9297;
$altgrey: #333333;
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: none;
  font-family: Georgia, "Times New Roman", Times, serif;
}

nav {
  width: 100%;
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: black;
  color: #fff;
  span {
    color: deeppink;
    font-size: 30px;
  }
}

.products {
  margin: 100px auto;
  text-align: center;
  margin-bottom: 100px;
  // display: flex;
  // justify-content:space-around ;
  // align-items: ;
  width: 100%;
  margin: 100px auto;
  .gridcont {
    margin: 20px 0px 10px 1%;
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 15%;
    div {
      display: flex;
      align-items: center;
      justify-content: center;
      flex-direction: column;
      width: 90%;
      height: fit-content;
      // outline: 1px solid $altgrey;
      img {
        width: 100%;
      }
      a {
        // width: 40px;
        // height: 10px;
        text-decoration: none;
        button {
          width: 50px;
          height: 30px;
          display: flex;
          align-items: center;
          justify-content: center;
          background-color: $altgrey;
          color: #ffffff;
          transition: all 0.3s ease-in-out;
          border: 1px solid #000;
          border-radius: 5px;
          &:hover {
            background-color: $grey;
            color: $altgrey;
          }

        
        }
      }
    }
  }
}
footer {
  display: flex;
  align-items: center;
  font-family: sans-serif;
  font-size: 8px;
  margin-top: 100px;
  width: 100%;
  background-color: black;
  height: 100px;
  color: #fff;
  font-style: italic;
  margin-top: 1300px;
}

@media (max-width: 600px) {
  .products {
    // border: 1px solid salmon;
    .gridcont {
      margin: 20px 0px 10px 4%;
      grid-template-columns: repeat(2, 1fr);
    }
  }
  footer {
    margin-top: 800vh;
  }
}

